--- a/app/views/participation_mailer/event_participation_email.text.erb
+++ b/app/views/participation_mailer/event_participation_email.text.erb
@@ -1,5 +1,5 @@
 Thanks for taking part of the event "<%= @event.title %>" !
 
-This event takes place the <%= @event.starting_date %>, it is administrated by <%= @event.administrator %>
+This event takes place the <%= @event.starting_date %>, it is administrated by <%= @event.administrator.first_name %>
 
 <%= @event.participants.count %> participant(s) already part of this event !
