--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Events#index</h1>
-<p>Find me in app/views/events/index.html.erb</p>
+<div class="album bg-light py-5">
+  <div class="container">
+      <div class="row">
+      <% @events.each do |event|%>
+        <div class="col-md-4">
+          <div class="card mb-4 box-shadow">
+            <div class="card-body">
+              <h5 class="card-title"><%= event.title %></h5>
+              <h6 class="card-subtitle mb-2 text-muted"><%= event.created_at.strftime("%Y-%m-%d at %H:%M") %></h6>
+              <p class="card-text"><%= event.description %></p>
+               <%# <%= link_to 'See event', event_path(event.id), class: 'card-link' %> 
+               <%# <%= link_to event.administrator.first_name, user_path(event.administrator.id), class: 'card-link' %> %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+      </div>
+  </div>
+</div>
