add static pages and links in header

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,15 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<section class="header1 cid-qyvisAZ1Bw" id="header1-7" data-rv-view="758">
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="mbr-white col-md-10">
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-5">Responsive Bootstrap About Us Page Template</h1>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">MEET OUR TEAM</h3>
+                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
+                    We are all very different. We were born in different cities, at different times, we love different music, food, movies. But we have something that unites us all. It is our company. We are its heart. We are not just a team, we are a family.
+                </p>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-black-outline display-4" href="index.html#form1-4">
+                        CONTACT US</a></div>
+            </div>
+        </div>
+    </div>
+</section>
