--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -13,7 +13,7 @@
         <%= link_to 'Contact', contact_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
-        <%= link_to 'Team', team_path, class: 'nav-link' %>
+        <%= link_to 'About', about_path, class: 'nav-link' %>
       </li>
       <% if user_signed_in? %>
         <li class="nav-item">
