--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,15 +1,19 @@
-<section class="header1 cid-qyvisAZ1Bw" id="header1-7" data-rv-view="758">
-    <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-5">Responsive Bootstrap About Us Page Template</h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2">MEET OUR TEAM</h3>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">
-                    We are all very different. We were born in different cities, at different times, we love different music, food, movies. But we have something that unites us all. It is our company. We are its heart. We are not just a team, we are a family.
-                </p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-black-outline display-4" href="index.html#form1-4">
-                        CONTACT US</a></div>
+<div class="aboutus-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="aboutus">
+                        <h2 class="aboutus-title">About Us</h2>
+                        <p class="aboutus-text">Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in.</p>
+                        <p class="aboutus-text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem</p>
+                        <a class="aboutus-more" href="#">read more</a>
+                    </div>
+                </div>
+                <div class="col-md-5 col-sm-6 col-xs-12">
+                    <div class="aboutus-banner">
+                        <img src="https://weezevent.com/wp-content/uploads/2018/06/organiser-evenement-professionnel-original-weezevent.jpg" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</section>
