--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-md-8">
-      <form action="/post" method="post">
+      <form>
         <input class="form-control" name="name" placeholder="Name..." /><br />
         <input class="form-control" name="phone" placeholder="Phone..." /><br />
         <input class="form-control" name="email" placeholder="E-mail..." /><br />
@@ -15,14 +15,14 @@
   <div class="col-md-4">
     <b>Customer service:</b> <br />
     Phone: +1 129 209 291<br />
-    E-mail: <a href="mailto:support@mysite.com">support@mysite.com</a><br />
+    E-mail: <a href="#">support@mysite.com</a><br />
     <br /><br />
     <b>Headquarter:</b><br />
     Company Inc, <br />
     Las vegas street 201<br />
     55001 Nevada, USA<br />
     Phone: +1 145 000 101<br />
-    <a href="mailto:usa@mysite.com">usa@mysite.com</a><br />
+    <a href="#">usa@mysite.com</a><br />
 
 
     <br /><br />
@@ -31,7 +31,7 @@
     25/F.168 Queen<br />
     Wan Chai District, Hong Kong<br />
     Phone: +852 129 209 291<br />
-    <a href="mailto:hk@mysite.com">hk@mysite.com</a><br />
+    <a href="#">hk@mysite.com</a><br />
 
 
   </div>
