--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -16,8 +16,14 @@
         <%= link_to 'About', about_path, class: 'nav-link' %>
       </li>
       <% if user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to 'Logout', destroy_user_session_path, class: 'nav-link' %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Profile
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <%= link_to 'Profile', '#', class: 'dropdown-item' %>
+            <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+          </div>
         </li>
       <% else %>
       <li class="nav-item dropdown">
