--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,21 @@
-<div class="album bg-light py-5">
+<%# Jumbotron %>
+
+<section class="bg-primary pb-4 text-center">
+  <div class="container h-100">
+    <div class="row h-100 align-items-center">
+      <div class="col-lg-12 text-center">
+        <h1 class="display-4 text-white mt-5 mb-2">Welcome to EventBrite !</h1>
+          <p class="lead">
+            <%# <%= link_to "Create an Event !", new_event_path, class: "btn btn-dark btn-lg mt-5" %> %>
+          </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<%# Main %>
+
+<main class="album bg-light py-5">
   <div class="container">
       <div class="row">
       <% @events.each do |event|%>
@@ -16,4 +33,4 @@
       <% end %>
       </div>
   </div>
-</div>
+</main>
