--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,7 +7,7 @@
       <div class="col-lg-12 text-center">
         <h1 class="display-4 text-white mt-5 mb-2">Welcome to EventBrite !</h1>
           <p class="lead">
-            <%# <%= link_to "Create an Event !", new_event_path, class: "btn btn-dark btn-lg mt-5" %> %>
+            <%= link_to "Create an Event !", new_event_path, class: "btn btn-dark btn-lg mt-5" %>
           </p>
       </div>
     </div>
