remove alert partial to application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   </head>
   <body>
      <%= render "components/header" %>
+     <%= render "components/alert" %>
     <%= yield %>
   </body>
 </html>
