--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,9 +2,10 @@
   <div role="main">
     <div class="starter-template">
       <h1>Your Profile</h1>
-      <p class="lead">Here you can find your personal infos & the events you're administrating</p>
+      <p class="lead">Find your personal infos & the events you're administrating</p>
     </div>
   </div>
+
   <section>
     <h2>Your personnal infos:</h2>
     <ul class="user-infos">
@@ -26,5 +27,11 @@
         </li>
       <% end %>
     </ul>
+  </section>
+
+  <section>
+    <h2>Edit your account:</h2>
+      <%= link_to 'Edit Personal infos', edit_user_path, class:'btn btn-primary'%>    
+      <%= link_to 'Edit Password & Email', edit_user_registration_path, class:'btn btn-danger'%>    
   </section>
 </div>
