add link to event show page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -25,8 +25,8 @@
               <h5 class="card-title"><%= event.title %></h5>
               <h6 class="card-subtitle mb-2 text-muted"><%= event.created_at.strftime("%Y-%m-%d at %H:%M") %></h6>
               <p class="card-text"><%= event.description %></p>
-               <%# <%= link_to 'See event', event_path(event.id), class: 'card-link' %> 
-               <%# <%= link_to event.administrator.first_name, user_path(event.administrator.id), class: 'card-link' %> %>
+              <p class="card-text">Administrator: <%= event.administrator.first_name %></p>
+               <%= link_to 'See event', event_path(event.id), class: 'card-link' %>
             </div>
           </div>
         </div>
