--- a/app/views/events/shared/_participation_link.html.erb
+++ b/app/views/events/shared/_participation_link.html.erb
@@ -1,8 +1,8 @@
 <% if event.administrator == current_user %>
-  <%= link_to "Event Dashboard", participations_path %><br />
+  <%= link_to "Event Dashboard", participations_path, class: 'btn btn-success' %><br />
 <% elsif current_user_already_participant?(event) %>
-  <%= link_to "Cancel participation", participation_path(current_user_participation(event).id), method: :delete %><br />
+  <%= link_to "Cancel participation", participation_path(current_user_participation(event).id, event_id: event.id ), method: :delete, class:'btn btn-danger' %><br />
 <% else%>
-  <%= link_to "Join the event !", new_participation_path %><br />
+  <%= link_to "Join the event !", new_participation_path(event_id: event.id), class: 'btn btn-primary' %><br />
 <% end %>
 
