--- a/app/views/components/_alert.html.erb
+++ b/app/views/components/_alert.html.erb
@@ -1,4 +1,4 @@
-<% flash.each do |type, msg| %>
+<% flash.to_hash.except('timedout').each do |type, msg| %>
   <div class="alert <%= bootstrap_class_for_flash(type) %> alert-dismissable fade show" role="alert">
     <%= msg %>
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
