prepopulated cutomer email in stripe checkout form

--- a/app/views/participations/new.html.erb
+++ b/app/views/participations/new.html.erb
@@ -17,6 +17,7 @@
             data-amount="<%= @amount %>"
             data-label="Register Now"
             data-currency="eur"
+            data-email="<%= current_user.email %>"
             data-locale="auto">
     </script>
   <% end %>
