--- a/app/views/participations/new.html.erb
+++ b/app/views/participations/new.html.erb
@@ -12,12 +12,12 @@
     <script src="https://checkout.stripe.com/checkout.js"
             class="stripe-button"
             data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-            data-description="Join the event !"
+            data-description="<%= @description %>"
             <%# strip "talks" in cents %>
             data-amount="<%= @amount %>"
             data-label="Register Now"
             data-currency="eur"
-            data-email="<%= current_user.email %>"
+            data-email="<%= current_user.email %>"p
             data-locale="auto">
     </script>
   <% end %>
