--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,6 +2,12 @@
   <h2 class="text-center">Create an account</h2>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
+    
+    <div class="field form-group">
+      <%= f.label :username %>
+      <%= f.text_field :username, autofocus: true, autocomplete: "username", placeholder: "Enter username", class:'form-control' %>
+    </div>
+
     <div class="field form-group">
       <%= f.label :email %>
       <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Enter email", class:'form-control' %>
