--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
   <section>
     <h2>Your personnal infos:</h2>
     <ul class="user-infos">
+      <li>Username: <%= current_user.username %></li>
       <li>First name: <%= current_user.first_name %></li>
       <li>Last name: <%= current_user.last_name %></li>
       <li>Description: <%= current_user.description %></li>
