--- a/app/views/events/shared/_form.html.erb
+++ b/app/views/events/shared/_form.html.erb
@@ -17,9 +17,14 @@
     <%= f.text_field :location, class: "form-control" %>
   </div>
 
-  <div class="form-group">
-    <%= f.label 'start_date' %>
-    <%= f.text_field :start_date, class: "form-control" %>
+  <div class=" form-group">
+    <%= f.label 'starting_date' %>
+    <%= f.text_field :starting_date, class: "form-control", id: "datepicker" %>
+  </div>
+
+  <div class=" form-group">
+    <%= f.label 'starting_time' %>
+    <%= f.text_field :starting_time, class: "form-control", id: "timepicker" %>
   </div>
 
   <div class="form-group">
