--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,13 +5,13 @@
 
     <%= current_user_avatar %>
 
-    <%= form_tag user_avatars_path(current_user.id), multipart: true do %>
+    <%= form_tag user_avatar_path(current_user.id), multipart: true do %>
       <%= label_tag :avatar %>
       <%= file_field_tag :avatar, class:"form-control" %>
       <%= submit_tag "Upload", class:"btn btn-primary" %>
     <% end %>
     
-    <%= link_to 'Delete avatar', user_avatars_path(current_user.id), method: :delete, class: "btn btn-danger" %>
+    <%= link_to 'Delete avatar', user_avatar_path(current_user.id), method: :delete, class: "btn btn-danger" %>
   </div>
 
   <h3>Edit your personnal infos:</h3>
