--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,8 +6,8 @@
     <%= current_user_avatar %>
 
     <%= form_tag user_avatar_path(current_user.id), multipart: true do %>
-      <%= label_tag :avatar %>
-      <%= file_field_tag :avatar, class:"form-control" %>
+      <%= label_tag :avatar %><br>
+      <%= file_field_tag :avatar %><br>
       <%= submit_tag "Upload", class:"btn btn-primary" %>
     <% end %>
     
