--- a/app/views/events/shared/_form.html.erb
+++ b/app/views/events/shared/_form.html.erb
@@ -37,6 +37,11 @@
     <%= f.number_field :price, in: 1...1000, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <%= f.label :images %><br>
+    <%= f.file_field :images, multiple: true, accept: ".png,.jpeg,.jpg" %>
+  </div>
+
   <%= submit_tag "Submit", class:"btn btn-primary" %>
 
 <% end %>
