refactor method call

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,7 +6,7 @@
     </div>
   </div>
 
- <% event_images(@event).each do |img| %>
+ <% display_event_images(@event).each do |img| %>
     <%= img %>
  <% end %>
 
