--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,25 +1,137 @@
 <div class="container">
-  <div role="main">
-    <div class="starter-template">
-      <h1>Events <%= @event.title %></h1>
-      <p class="lead"> <%= @event.description %></p>
+
+  <h1 class="mt-4 mb-3"><%= @event.title %>
+    <small>by
+      <%= @event.administrator.username %>
+    </small>
+  </h1>
+
+  <!-- Page Heading/Breadcrumbs -->
+
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">
+      <%= link_to 'Home', root_path %>
+    </li>
+    <li class="breadcrumb-item active"><%= @event.title %></li>
+  </ol>
+
+  <div class="row">
+    <!-- Event Content Column -->
+
+    <div class="col-lg-8">
+
+      <section>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <% @event.images.each_with_index do |_, i| %>
+              <li data-target="#carouselExampleIndicators" data-slide-to="<%= i %>" <%='class = active' if i == 0 %>></li>
+            <%end%>
+          </ol>
+          <div class="carousel-inner rounded" role="listbox">
+            <% if @event.images.attached? %>
+              <% @event.images.each_with_index do |img, i| %>
+                  <div class="carousel-item <%= 'active' if i == 0%>" style="background-image: url(<%= url_for(img.blob) %>)">
+                  </div>
+              <% end %>
+            <% else %>
+              <div class="carousel-item active" style="background-image: url(<%= image_path('default-event-image.png') %>)">
+              </div>
+            <% end %>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </section>
+
+      <hr>
+              <!-- Date/Time -->
+      <p>Posted on <%= @event.creation_date_and_time %></p>
+      <hr>
+              <!-- Event description -->
+      <p class="lead"><%= @event.description %></p>
+
+      <hr>
+
+          <!-- Comments Form -->
+      <div class="card my-4">
+        <h5 class="card-header">Leave a Comment:</h5>
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <textarea class="form-control" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+      </div>
+    
+        <!-- Comment with nested comments -->
+      <div class="media mb-4">
+        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+        <div class="media-body">
+          <h5 class="mt-0">Commenter Name</h5>
+          Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+
+          <div class="media mt-4">
+            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+            <div class="media-body">
+              <h5 class="mt-0">Commenter Name</h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            </div>
+          </div>
+
+          <div class="media mt-4">
+            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
+            <div class="media-body">
+              <h5 class="mt-0">Commenter Name</h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            </div>
+          </div>
+
+        </div>
+      </div>
+
     </div>
+    <!-- /.col-lg-8-->
+
+      <!-- Sidebar Widgets Column -->
+
+    <div class="col-md-4">
+
+      <!-- Administration / Event regitration Widget -->
+
+      <div class="card my-4">
+        <h5 class="card-header"><%= current_user_is_administrator?(@event) ? 'Administration' : 'Take Part !' %></h5>
+        <div class="card-body">
+          <%= render partial: 'events/shared/participation_link', locals: {event: @event} %>
+        </div>
+      </div>
+
+      <!-- Event Detail Widget -->
+
+      <div class="card my-4">
+        <h5 class="card-header">Event Details</h5>
+        <div class="card-body">
+          <ul>
+            <li>N° of participants: <%= @event.participants.count %></li>
+            <li>Administrator: <%= @event.administrator.username %></li>
+            <li>Starting: <%= @event.starting_date_time %></li>
+            <li>Ending: <%= @event.ending_date_date_time %></li>
+            <li>Location: <%= @event.location %></li>
+            <li>Price: <%= pretty_amount(@amount) %></li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+    <!-- /.cold-md-4-->
   </div>
-
- <% display_event_images(@event).each do |img| %>
-    <%= img %>
- <% end %>
-
-  <section>
-    <h2>Event Details:</h2>
-    <ul>
-      <li>N° of participants: <%= @event.participants.count %></li>
-      <li>Administrator: <%= @event.administrator.username %></li>
-      <li>Starting: <%= @event.starting_date_time %></li>
-      <li>Ending: <%= @event.ending_date_date_time %></li>
-      <li>Location: <%= @event.location %></li>
-      <li>Price: <%= pretty_amount(@amount) %></li>
-    </ul>
-  </section>
-  <%= render partial: 'events/shared/participation_link', locals: {event: @event} %>
+    <!-- /.row -->
 </div>
+  <!-- /.container -->
