--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,40 +1,31 @@
 <div class="container">
 
-<h3 class="text-center">Contact us</h3><br />
+    <!-- Page Heading/Breadcrumbs -->
+    <h1 class="mt-4 mb-3">Contact</h1>
 
-<div class="row">
-  <div class="col-md-8">
-      <form>
-        <input class="form-control" name="name" placeholder="Name..." /><br />
-        <input class="form-control" name="phone" placeholder="Phone..." /><br />
-        <input class="form-control" name="email" placeholder="E-mail..." /><br />
-        <textarea class="form-control" name="text" placeholder="How can we help you?" style="height:150px;"></textarea><br />
-        <input class="btn btn-primary" type="submit" value="Send" /><br /><br />
-      </form>
-  </div>
-  <div class="col-md-4">
-    <b>Customer service:</b> <br />
-    Phone: +1 129 209 291<br />
-    E-mail: <a href="#">support@mysite.com</a><br />
-    <br /><br />
-    <b>Headquarter:</b><br />
-    Company Inc, <br />
-    Las vegas street 201<br />
-    55001 Nevada, USA<br />
-    Phone: +1 145 000 101<br />
-    <a href="#">usa@mysite.com</a><br />
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <%=link_to 'Home', root_path %>
+        </li>
+        <li class="breadcrumb-item active">Contact</li>
+    </ol>
 
-
-    <br /><br />
-    <b>Hong kong:</b><br />
-    Company HK Litd, <br />
-    25/F.168 Queen<br />
-    Wan Chai District, Hong Kong<br />
-    Phone: +852 129 209 291<br />
-    <a href="#">hk@mysite.com</a><br />
-
-
-  </div>
+    <!-- Contact Detail Column -->
+    <div class="row">
+        <div class="col-lg-6">
+            <%= image_tag "georgesatalla.jpg", class: "img-fluid rounded mb-4", alt:"Georges ATALLA" %>
+        </div>
+        <div class="col-lg-6">
+          <h2>HIRE ME !</h2>
+          <h3>Georges ATALLA</h3>
+          <h4>Ruby on Rails developer</h4>
+          <p>Phone: +33.(0)6.80.81.93.40</p>
+          <p>Email:
+            <a href="mailto:georges_atalla@hotmail.fr">georges_atalla@hotmail.fr</a>
+          </p>
+          <p>Github: <%=link_to 'Ggs91', 'https://github.com/Ggs91/', target:"_blank" %> </p>
+        </div>
+    </div>
+    <!-- /.row -->
 </div>
-
-</div>
+    <!-- /.container -->
