--- a/app/views/events/shared/_form.html.erb
+++ b/app/views/events/shared/_form.html.erb
@@ -1,4 +1,3 @@
-<%= render partial: 'components/error_messages', locals: {resource: resource} %>
   <%= yield %>
 <%= form_for resource, :html => { novalidate: true, class: "needs-validation" } do |f| %>
 
@@ -28,7 +27,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label 'durations' %>
+    <%= f.label 'duration' %>
     <%= f.time_select :duration, minute_step: 5, include_seconds: false, ignore_date: true, prompt: { hour: 'Choose hour', minute: 'Choose minute' }, class: "form-control" %>
   </div>
 
