--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -72,31 +72,27 @@
       </div>
     
         <!-- Comment with nested comments -->
-      <div class="media mb-4">
-        <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-        <div class="media-body">
-          <h5 class="mt-0">Commenter Name</h5>
-          Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+      <% @event.comments.each do |comment| %>  
+        <div class="media mb-4">
+          <%= user_avatar(comment.commenter, "d-flex mr-3 rounded-circle", 50) %>
+          <div class="media-body">
+            <h5 class="mt-0"> <%= comment.commenter.username %></h5>
 
-          <div class="media mt-4">
-            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-            <div class="media-body">
-              <h5 class="mt-0">Commenter Name</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-            </div>
+            <%= comment.content %>
+
+            <% comment.comments.each do |nested_comment| %>
+              <div class="media mt-4">
+                <%= user_avatar(comment.commenter, "d-flex mr-3 rounded-circle", 50) %>
+                <div class="media-body">
+                  <h5 class="mt-0"><%= nested_comment.commenter.username %></h5>
+                  <%= nested_comment.content %>
+                </div>
+              </div>
+            <% end %>
+
           </div>
-
-          <div class="media mt-4">
-            <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
-            <div class="media-body">
-              <h5 class="mt-0">Commenter Name</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-            </div>
-          </div>
-
         </div>
-      </div>
-
+      <% end %>
     </div>
     <!-- /.col-lg-8-->
 
