add logic to comments

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -62,23 +62,25 @@
       <div class="card my-4">
         <h5 class="card-header">Leave a Comment:</h5>
         <div class="card-body">
-          <form>
+
+          <%= form_for Comment.new, url: event_comments_path(@event.id), :html => { novalidate: true, class: "needs-validation" } do |f| %>
             <div class="form-group">
-              <textarea class="form-control" rows="3"></textarea>
+              <%= f.text_area :content, class: "form-control", row: "3" %>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+            <%= submit_tag "Submit", class:"btn btn-primary" %>
+          <% end %>
+
         </div>
       </div>
     
         <!-- Comment with nested comments -->
-      <% @event.comments.each do |comment| %>  
+      <% @event.comments.order("created_at DESC").each_with_index do |comment, i| %>  
         <div class="media mb-4">
           <%= user_avatar(comment.commenter, "d-flex mr-3 rounded-circle", 50) %>
           <div class="media-body">
             <h5 class="mt-0"> <%= comment.commenter.username %></h5>
 
-            <%= comment.content %>
+            <%= comment.content %><br>
 
             <% comment.comments.each do |nested_comment| %>
               <div class="media mt-4">
