--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,5 +13,6 @@
  *= require bootstrap.min
  *= require modern-business
  *= require bootstrap_alert
+ *= require administrate_custom_style
  *= require main
  */
