--- a/app/assets/stylesheets/administrate_custom_style.scss
+++ b/app/assets/stylesheets/administrate_custom_style.scss
@@ -2,9 +2,16 @@
   text-align: center; 
 }
 
-.btn-important-action {
-  background: #d32f2f !important; 
+.btn-validate-action {
+  background: #75d607 !important; 
     &:hover {
-    background: #a51c1c !important;
+    background: #3ea018 !important;
+  }
+}
+
+.btn-unvalidate-action {
+  background: #d10a0a  !important; 
+    &:hover {
+    background: #9e0707!important;
   }
 }
