--- a/app/views/components/_error_messages.html.erb
+++ b/app/views/components/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if resource.errors.any? %>
   <ul>
   <% resource.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
+    <li class="flash-error" ><%= message %></li>
   <% end %>
   </ul>
 <% end %>
