--- a/app/views/events/submission_success.html.erb
+++ b/app/views/events/submission_success.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="mt-5">Thank you for your submitting an event !</h1>
+  <h1 class="mt-5">Thank you for submitting an event !</h1>
 
   <p class="lead">It will be reviewed and validated very soon !</p>
 
