--- a/app/views/components/_header.html.erb
+++ b/app/views/components/_header.html.erb
@@ -11,7 +11,7 @@
           <%= link_to 'Home', root_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Creat event', new_event_path, class: 'nav-link' %>
+          <%= link_to 'Create event', new_event_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
           <%= link_to 'Contact', contact_path, class: 'nav-link' %>
