add link to access newly created event

--- a/app/views/events/submission_success.html.erb
+++ b/app/views/events/submission_success.html.erb
@@ -3,5 +3,6 @@
 
   <p class="lead">It will be reviewed and validated very soon !</p>
 
-<%= link_to "Home", root_path, class: "btn btn-primary"%>
+  <%= link_to "See your event", event_path(@event.id) %> <br>
+  <%= link_to "Home", root_path, class: "btn btn-primary"%>
 </div>
