config scss files

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,4 +1,12 @@
+@import 'base/font';
+@import 'base/config';
+@import 'layout/grid';
+@import 'layout/header';
+
+
 /* Image cover h-100 cards  */
+
+
 div.card.h-100 img {
   width: 100%;
   height: 200px;
