--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= stylesheet_link_tag 'application', media: 'all' %>
   </head>
   <body>
-    <%= render "components/header" %>
+    <%= render "header" %>
     <%= render "components/alert" %>
     <%= yield %>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
