--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -27,7 +27,7 @@
 }
 
 #main-nav .dropdown-item:hover {
-  background-color: rgba(23, 20, 31);
+  background-color: rgb(23, 20, 31);
 }
 
 #main-nav .dropdown-menu.show{
