add highlight class to brand

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -3,8 +3,9 @@
     <div class="container">
 
       <%# Brand butoon %>
-
-      <%= link_to "EventBright", root_path, class: "navbar-brand" %>
+      <a href="/" class="navbar-brand">
+        Event<span class="highlight">Bright</span>
+      </a>
 
       <%# Navbar Toggler %>
 
