--- a/app/assets/stylesheets/components/_showcase.scss
+++ b/app/assets/stylesheets/components/_showcase.scss
@@ -18,11 +18,19 @@
   font-size: 3.5rem;
   margin-bottom: 1rem !important;
   font-weight: 700;
+  text-shadow: 2px 4px 4px rgba(0,0,0,.2),0 -5px 10px hsla(0,0%,100%,.15);
 }
 
 #showcase p {
   font-size: 1.2rem;
+  text-shadow: 2px 4px 4px rgba(0,0,0,.2),0 -5px 10px hsla(0,0%,100%,.15);
   margin-bottom: 2.5rem !important;
+}
+
+#showcase .btn {
+  box-shadow: 2px 4px 4px rgba(0,0,0,.2),0 -5px 10px hsla(0,0%,100%,.15);
+  text-transform: uppercase;
+  letter-spacing: .02em;
 }
 
 @media screen and (max-width: 1200px) {
