change bg-color and add heading styles

--- a/app/assets/stylesheets/base/_config.scss
+++ b/app/assets/stylesheets/base/_config.scss
@@ -7,7 +7,15 @@ html {
 }
 
 body{
-  background-color: #F8F8F8;
+  background-color: #fff;
   margin-bottom: 75px;
 }
 
+h1 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  color: var(--primary);
+}
