add btn-wide button

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,3 +1,16 @@
 .btn {
   border-radius: 3px;
 }
+
+.btn-wide {
+  padding-left: 10em;
+  padding-right: 10em;
+}
+
+@media (max-width: 570px) {
+  .btn-wide {
+    padding-left: 4em;
+    padding-right: 4em;
+    font-size: 1.1em;
+  }
+}
