--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -1,7 +1,9 @@
 #main-nav {
   position: absolute;
+  top: 0;
   width: 100%; 
-  z-index: 2;
+  z-index: 100;
+  height: 65px;
 }
 
 .bg-dark-transparent {
