--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,17 @@
-<div class="container">
-  <h2 class="text-center">Create an account</h2>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    
-    <div class="field form-group">
-      <%= f.label :username %>
-      <%= f.text_field :username, autofocus: true, autocomplete: "username", placeholder: "Enter username", class:'form-control' %>
-    </div>
-
-    <div class="field form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Enter email", class:'form-control' %>
-    </div>
-
-    <div class="field form-group">
-      <%= f.label :password %>
-        <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class:'form-control' %> 
-    </div>
-
-    <div class="field form-group">
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password confirmation", class:'form-control' %> 
-    </div>
-
-    <div class="actions">
-      <%= f.submit "Sign up", class: 'btn btn-primary' %>
-    </div>
+<div class="form-wrapper">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-signin" )do |f| %>
+  <%= image_tag "icon/e.png", class: "mb-4", width: "72", height: "72" %>
+    <h1 class="h3 mb-3 font-weight-normal">Create an Account</h1>
+    <%= f.label :username, class: "sr-only" %>
+    <%= f.text_field :username, autofocus: true, autocomplete: "username", placeholder: "Enter username", class:'form-control' %>
+    <%= f.label :email, class: "sr-only" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Enter email", class:'form-control' %>
+    <%= f.label :password, class: "sr-only" %>
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class:'form-control' %> 
+    <%= f.label :password_confirmation, class: "sr-only" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password confirmation", class:'form-control' %> 
+    <%= f.submit "Signup", class: "btn btn-lg btn-primary btn-block" %>
+    <p class="mt-5 mb-3 text-muted">EventBright © 2021</p>
+    <%= render "devise/shared/links" %>
   <% end %>
-
-  <%= render "devise/shared/links" %>
 </div>
