--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
+<div class="clear-absolute"></div>
 <div class="container">
-
     <!-- Page Heading/Breadcrumbs -->
     <h1 class="mt-4 mb-3">About Me</h1>
 
@@ -20,7 +20,7 @@
         <h3>Ruby on Rails developer</h3>
         <p>Hi there! I'm a Ruby on Rails developer, I also love JavaScript, HTML & CSS !</p>
         <p>This is actually one of my project, a full CRUD RoR Eventbrite clone !</p>
-        <p>Checkout my porfolio that I've created from scratch:  <%=link_to 'georgesatalla.com', 'https://www.georgesatalla.com/', target:"_blank"  %> </p>
+        <p>Checkout my porfolio that I've created from scratch: <%= link_to 'georgesatalla.com', 'https://www.georgesatalla.com/', target:"_blank" %></p>
         <p>HIRE ME ! I'm looking for a fulltime job with a team :) </p>
         <p>Github: <%=link_to 'Ggs91', 'https://github.com/Ggs91/', target:"_blank" %> </p>
         <p>Contact: <a href="mailto:georges_atalla@hotmail.fr">georges_atalla@hotmail.fr</a></p>
@@ -29,7 +29,7 @@
     <!-- /.row -->
 
     <!-- Projects -->
-    <h2>Some of my projects</h2>
+    <h2>Some of my other projects</h2>
 
     <div class="row">
         <div class="col-lg-4 mb-4">
