--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,9 @@
   </head>
   <body>
     <%= render "header" %>
-    <%= render "components/alert" %>
+    <%= render "alert" %>
     <%= yield %>
+    <%= render "footer" %>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <%= javascript_include_tag 'application' %>
   </body>
