--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= render layout: 'events/shared/form', locals: { resource: @event } do %>
+  <%= render layout: 'events/form', locals: { resource: @event } do %>
     <h2 class="text-center">Edit Event</h2>
   <% end %>
 </div>
