--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,42 +1,9 @@
-<%# Jumbotron %>
-
-<section class="bg-primary pb-4 text-center">
-  <div class="container h-100">
-    <div class="row h-100 align-items-center">
-      <div class="col-lg-12 text-center">
-        <h1 class="display-4 text-white mt-5 mb-2">Welcome to EventBrite !</h1>
-          <p class="lead">
-            <%= link_to "Create an Event !", new_event_path, class: "btn btn-dark btn-lg mt-5" %>
-          </p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<%# Main %>
-
+<div class="clear-absolute"></div>
 <div class="container">
-  <h1 class="my-4">Latest Events</h1>
+  <h2 class="my-4">Latest Events</h2>
+  <%= render partial: "events/event_card_list", locals: {events: @events} %>
 
-  <div class="row">
-  <% @events.each do |event|%>
-    <div class="col-lg-4 col-sm-6 portfolio-item">
-      <div class="card h-100">
-        <%= link_to event_path(event.id) do %>
-          <%= display_event_images(event).first%>
-        <% end %>
-        <div class="card-body">
-          <h4 class="card-title">
-            <%=link_to event.title, event_path(event.id) %>
-          </h4>
-          <p class="card-subtitle mb-2 text-muted"><%= event.created_at.strftime("%Y-%m-%d at %H:%M") %></p>
-          <p class="card-text"><%= event.description %></p>
-        </div>
-      </div>
-    </div>
-  <% end %>
-  </div>
-  
+  <div class="text-center">
     <%== pagy_bootstrap_nav(@pagy) %>
-
+  </div>
 </div>
