--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,6 @@
+<div class="clear-absolute"></div>
 <div class="container">
-  <%= render layout: 'events/shared/form', locals: { resource: @event } do %>
-    <h2 class="text-center">Create an Event</h2>
+  <%= render layout: 'events/form', locals: { resource: @event } do %>
+    <h2 class="text-center">Organise an Event</h2>
   <% end %>
 </div>
