--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="form-group">
     <%= f.label 'duration' %>
-    <%= f.time_select :duration, minute_step: 5, include_seconds: false, ignore_date: true, prompt: { hour: 'Choose hour', minute: 'Choose minute' }, class: "form-control" %>
+    <%= f.time_select :duration, minute_step: 5, include_seconds: false, ignore_date: true, prompt: { hour: 'Hour', minute: 'Minute' }, class: "form-control" %>
   </div>
 
   <div class="form-group">
