--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,8 +1,9 @@
+<% banner_img =|| false %>
 <section class="banner">
   <div class="flex-container overlay d-flex justify-content-center align-items-center">
     <div class="content container">
-      <h1>About</h1>
+      <h1><%= title %></h1>
     </div>
   </div>
-  <img src="sport.jpg" class="banner-img"></img>
+  <%= render partial: "shared/banner_img", locals: { banner_img: banner_img } %>
 </section>
