--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -4,6 +4,7 @@
 @import 'layout/header';
 @import 'layout/footer';
 @import 'utilities/classes';
+@import 'utilities/mixins';
 @import 'components/button';
 @import 'components/alert';
 @import 'components/banner';
