equire showcase_carousel

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -11,5 +11,6 @@
 @import 'components/pagination';
 @import 'pages/home';
 @import 'components/carousel';
+@import 'components/showcase_carousel';
 @import 'components/card';
 @import 'components/form';
