switch carousel for carousel_showcase & and regular carousel

--- a/app/views/static_pages/_showcase_carousel.html.erb
+++ b/app/views/static_pages/_showcase_carousel.html.erb
@@ -1,4 +1,4 @@
- <div id="main-carousel" class="carousel slide" data-ride="carousel">
+ <div id="showcase-carousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <%= image_tag "sport.jpg", alt:"Sport Event", class:"carousel-img" %>
