h2 in centering div

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,8 @@
 <div class="clear-absolute"></div>
 <div class="container">
   <%= render layout: 'events/form', locals: { resource: @event } do %>
-    <h2 class="text-center">Organise an Event</h2>
+  <div class="text-center">
+    <h2>Organise an Event</h2>
+  </div>
   <% end %>
 </div>
