--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,4 +1,4 @@
-<% banner_img =|| false %>
+<% banner_img ||= false %>
 <section class="banner">
   <div class="flex-container overlay d-flex justify-content-center align-items-center">
     <div class="content container">
